@@ -829,19 +829,9 @@ setClassUnion("atomicVector", ## "double" is not needed, and not liked by some
 			  "complex", "raw", "character"))
 
 ## NB: --> see "numLike" above
+if(FALSE) # not used anywhere
 setClassUnion("numericVector", members = c("logical", "integer", "numeric"))
 
-setClassUnion("Mnumeric", members = c("numericVector", "Matrix"))
-## not "matrix" as that extends "vector" and contains "character", "structure" ...
-
-setValidity("Mnumeric",
-            function(object) {
-                if(is.numeric(object) ||
-                   is.logical(object) ||
-                   inherits(object, "Matrix")) return(TRUE)
-                ## else
-                "Not a valid 'Mnumeric' class object"
-		})
 
 
 
